ViTables ChangeLog
==================
** August 19 2023 **
Fixed a bug in module test_start.py.

VERSION file removed because it is unneeded.

** August 16 2023 **
Fixed a bug in module vtapp.py.

Removed plugins section from pyproject.toml.

** August 04, 2023 **
Users Guide and README.md updated.

pyproject.toml updated in order to package the users guide too.

** August 02, 2023 **
Updated the script that generates the users guide.

Users Guide updated.

** July 31, 2023 **
Package build system changed from setuptools to flit.

** July 30, 2023 **
setup.py and setup.cfg files changed to use the new README.md file.

** July 28, 2023 **
Implementation of extensions has been simplified.

** July 23, 2023 **
Implementation of extensions has been refactored.

** July 21, 2023 **
Plugins moved to extensions and implemented from scratch.

** July 20, 2023 **
Support PyQt6, this is useful for mac users who cant install
PyQt5.

** January 03, 2019 **
Added script to automatically generate the Users Guide.

** December 31, 2019 **
setup.py slightly improved.

** December 25, 2019 **
Fixed the Xmas day bug in vtapp.py.

Fixed a syntax error in the setup.py description that caused PyPI to refuse
the package upload.

** December 24, 2019 **
Release 3.0.1 is ready to be published.

** December 23, 2019 **
Support for pandas time series has been updated.

** December 15, 2019 **
Fixed a couple of bugs in time_series.py.

Ignore deprecation warnings coming from numpy in csvutils.py.

** December 13, 2019 **
Package version has been updated.

Splash screen has been updated.

Copyright and URLs have been updated.

.txt files have been updated.

** December 12, 2019 **
Changed script entry point in setup.py.

** December 10, 2019 **
Small style changes applied to start.py and setup.py.

** December 21, 2018 **
Fixed sip imports and setup.py syntax.

** September 26, 2018 **
Fixed issue #88 (dataframe lost columns).

** October 20, 2017 **
Added support for multi-dim EArrays.
